modification de l'exemple

--- a/config.php.example
+++ b/config.php.example
@@ -19,8 +19,14 @@ $config['backGroundScan'][0] = array("network" => "192.168.14.0/24",
                                     "community"=>"community",
                                     "version"=>"2c" );
 
+
+//AutoAdd permet d'inserer directement une machine trouvé par OCD dans centreon de redemarrer le poller
+//Poller, il faut specifier le poller qui va être utilisé pour les machines trouvées sur ce réseau
+
 $config['backGroundScan'][1] = array("network" => "192.168.4.0/24",
                                      "community"=>"community",
+				     "autoAdd" =>"true",
+			             "poller" => "Central",
                                     "version"=>"2c" );
 
 $config['backGroundScan'][2] = array("network" => "192.168.92.0/24",
